# lox.cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: lint.yml
grammar/: lox
src/: ASTPrinter.cpp  ASTPrinter.h  CMakeLists.txt  Environment.cpp  Environment.h  Expr.cpp  Expr.h  GenerateAST.cpp  GenerateAST.h  Interpreter.cpp  Interpreter.h  Lox.cpp  Lox.h  LoxCallable.h  LoxClass.cpp  LoxClass.h  LoxFunction.cpp  LoxFunction.h  LoxInstance.cpp  LoxInstance.h  Parser.cpp  Parser.h  Resolver.cpp  Resolver.h  Return.cpp  Return.h  RuntimeError.cpp  RuntimeError.h  Scanner.cpp  Scanner.h  Stmt.cpp  Stmt.h  Token.cpp  Token.h  TokenType.h  main.cpp
tests/: precedence.lox
tests/assignment/: associativity.lox  global.lox  grouping.lox  infix_operator.lox  local.lox  prefix_operator.lox  syntax.lox  to_this.lox  undefined.lox
tests/block/: empty.lox  scope.lox
tests/call/: bool.lox  nil.lox  num.lox  object.lox  string.lox
tests/class/: empty.lox  inherit_self.lox  inherited_method.lox  local_inherit_other.lox  local_inherit_self.lox  local_reference_self.lox  reference_self.lox
tests/constructor/: arguments.lox  call_init_early_return.lox  call_init_explicitly.lox  default.lox  default_arguments.lox  early_return.lox  extra_arguments.lox  init_not_method.lox  missing_arguments.lox  return_in_nested_functions.lox  return_value.lox
tests/expressions/: parse.lox
tests/for/: class_in_body.lox
tests/function/: body_must_be_block.lox  empty_body.lox  extra_arguments.lox  local_mutual_recursion.lox  local_recursion.lox  missing_arguments.lox  missing_comma_in_parameters.lox  mutual_recurssion.lox  nested_call_with_arguments.lox  parameters.lox  (+2 more)
(+84 files in other folders)
